[package]
name = "vessels-web"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
vessels = { git = "https://github.com/noocene/vessels", features = ["ring-sha256"] }
futures = "0.3.5"
core-futures-io = { git = "https://github.com/noocene/core-futures-io" }
js-sys = "0.3.40"
wasm-bindgen-futures = "0.4.13"
wasm-bindgen = "0.2.63"

[workspace]
members = ["examples/test-vessel", "examples/run-test-vessel"]
