[package]
name = "run_test_vessel"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
vessels = { git = "https://github.com/noocene/vessels", features = ["ring-sha256"] }
vessels-web = { path = "../../" }
wasm-bindgen-futures = "0.4.13"
core-futures-io = { git = "https://github.com/noocene/core-futures-io" }
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3.40", features = ["console"] }